# fastai-starter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose-minio.yml  example.env  pyproject.toml  ruff.toml
frontend/: index.html
frontend/assets/: index-C8XsvvfN.css  index-Clm2txon.js
src/: generators.py  main.py  models.py  settings.py  storage.py
src/routers/: frontend.py
