[project]
name = "fastai-dvmn"
version = "0.1.1"
description = "FastAPI educational project."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi[standard]==0.115.12",
    "pydantic-settings>=2.12.0",
]
[dependency-groups]
dev = [
    "editorconfig-checker==3.2.1",
    "pre-commit>=4.3.0",
    "ruff==0.11.13",
]
